Update: "회원목록 완성 및 페이지네이션 수정"

--- a/html/memList.html
+++ b/html/memList.html
@@ -123,9 +123,64 @@
                 <h2 class="title">회원 목록</h2>
                 <hr>
                 <div id="table-container">
-                    
+                    <table id="pg-table">
+                        <thead>
+                            <tr>
+                                <th class="col-1">이름</th>
+                                <th class="col-2">사번</th>
+                                <th class="col-3">소속</th>
+                                <th class="col-4">부서</th>
+                                <th class="col-5">사용자역할</th>
+                                <th class="col-6">팀 역할</th>
+                                <th class="col-7">가입일</th>
+                                <th class="col-8">승인 여부</th>
+                                <th class="col-9">회원상세</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td class="col-1">정준범</td>
+                                <td class="col-2">12341234</td>
+                                <td class="col-3">오티아이</td>
+                                <td class="col-4">서비스 개발1팀</td>
+                                <td class="col-5">개발자</td>
+                                <td class="col-6">팀원</td>
+                                <td class="col-7">2024.10.01</td>
+                                <td class="col-8">Y</td>
+                                <td class="col-9">
+                                    <button class="detail-btn">상세보기</button>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td class="col-1">김채홍</td>
+                                <td class="col-2">14832483</td>
+                                <td class="col-3">오티아이</td>
+                                <td class="col-4">서비스 개발1팀</td>
+                                <td class="col-5">개발자</td>
+                                <td class="col-6">팀원</td>
+                                <td class="col-7">2024.10.01</td>
+                                <td class="col-8">Y</td>
+                                <td class="col-9">
+                                    <button class="detail-btn">상세보기</button>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td class="col-1">이민성</td>
+                                <td class="col-2">83215751</td>
+                                <td class="col-3">오티아이</td>
+                                <td class="col-4">서비스 개발1팀</td>
+                                <td class="col-5">개발자</td>
+                                <td class="col-6">팀원</td>
+                                <td class="col-7">2024.10.01</td>
+                                <td class="col-8">Y</td>
+                                <td class="col-9">
+                                    <button class="detail-btn">상세보기</button>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
                 </div>
-                <div id="pagenation">
+                <div id="pagination">
                     <a class="btn page-btn shadow-sm">
                         <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-chevron-left" viewBox="0 0 16 16">
                         <path fill-rule="evenodd" d="M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0"/>
