Update: "myportal 사이드바 적용"

--- a/html/myportal.html
+++ b/html/myportal.html
@@ -24,7 +24,36 @@
 
     <div id="main-content">
         <!-- 사이드바 -->
-        <div id="side-bar" class="bg-primary-subtle"></div>
+        <div id="side-bar">
+            <div id="chart" class="nav-item">
+                <a class="nav-link disabled" aria-disabled="true" id="sr-mgmt">My portal</a>
+                <hr class="navbar-vertical-divider" id="sr-hr">
+            </div>
+            <a class="nav-link" id="sr-request" href="#">
+                <i id="chart" class="bi bi-clipboard-check"></i>나의 할 일
+                <i id="chevron" class="bi bi-chevron-right"></i>
+            </a>
+            <div id="chart" class="nav-item">
+                <a class="nav-link disabled" aria-disabled="true" id="sr-mgmt">SR 관리</a>
+                <hr class="navbar-vertical-divider" id="sr-hr">
+            </div>
+            <a class="nav-link" id="sr-request" href="#">
+                <i id="chart" class="bi bi-clipboard-plus"></i>SR 요청 접수
+                <i id="chevron" class="bi bi-chevron-right"></i>
+            </a>
+            <a class="nav-link" id="sr-prg" href="#">
+                <i id="chart" class="bi bi-clipboard-data-fill"></i>SR 진척 조회
+                <i id="chevron" class="bi bi-chevron-right"></i>
+            </a>
+            <div id="chart" class="nav-item">
+                <a class="nav-link disabled" aria-disabled="true" id="sr-mgmt">게시판</a>
+                <hr class="navbar-vertical-divider" id="sr-hr">
+            </div>
+            <a class="nav-link" id="sr-request" href="#">
+                <i id="chart"  class="bi bi-book-half"></i>공지사항
+                <i id="chevron" class="bi bi-chevron-right"></i>
+            </a>
+        </div>
 
         <!-- section -->
         <div id="section">
