Update: "reset.css 적용 및 마진 수정"

--- a/html/srList.html
+++ b/html/srList.html
@@ -13,6 +13,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
     <!-- 개별 css -->
+    <link href="../css/reset.css" rel="stylesheet">
     <link href="../css/srList.css" rel="stylesheet">
 
 </head>
@@ -71,7 +72,7 @@
                 <div id="search-box">
                     <div class="searchBox1">
                         <ul class="ul-style">
-                            <li class="li-style">
+                            <li class="li-style first-li">
                                 <div id="search-thing">조회기간</div>
                                 <div class="date-style">
                                     <input id="prg-search" type="date" class="date-form"> -
@@ -94,7 +95,7 @@
                     </div>
                     <div class="searchBox2">
                         <ul class="ul-style">
-                            <li class="li-style">
+                            <li class="li-style first-li">
                                 <div id="search-thing">등록자 소속</div>
                                 <input id="search-dept" type="text">
                             </li>
@@ -157,17 +158,13 @@
                 </div>
                 <div id="pagination">
                     <a class="btn page-btn shadow-sm">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-chevron-left" viewBox="0 0 16 16">
-                        <path fill-rule="evenodd" d="M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0"/>
-                        </svg>
+                        <i class="bi bi-chevron-left"></i>
                     </a>
                     <a class="btn page-btn shadow-sm active">1</a>
                     <a class="btn page-btn shadow-sm">2</a>
                     <a class="btn page-btn shadow-sm">3</a>
                     <a class="btn page-btn shadow-sm">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-chevron-right" viewBox="0 0 16 16">
-                            <path fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708"/>
-                        </svg>
+                        <i class="bi bi-chevron-right"></i>
                     </a>
                     <select class="row-select form-select">
                         <option value="10">10</option>
