--- a/html/srPlan.html
+++ b/html/srPlan.html
@@ -1,72 +1,108 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>SR 계획 정보</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link href="../css/reset.css" rel="stylesheet">
     <link href="../css/srPlan.css" rel="stylesheet">
+
 </head>
+
 <body>
     <div id="sr-plan">
-      
+
         <div id="title">
-            SR 요청 상세정보
+            SR 요청 처리정보
         </div>
-    ee
-    <hr>
-    <form>
-        <div class="form-group">
-            <label for="srNumber">SR번호</label>
-            <input type="text" id="srNumber" name="srNumber" value="SR_0005" readonly>
+        <hr>
+        <div class="tabs-container d-flex align-items-center">
+            <ul class="nav nav-tabs">
+                <li class="nav-item">
+                    <a class="nav-link pg-tab" data-bs-toggle="tab" href="#">SR계획정보</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link pg-tab active" data-bs-toggle="tab" href="#">SR자원정보</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link pg-tab" data-bs-toggle="tab" href="#">SR진척율</a>
+                </li>
+            </ul>
 
-            <label for="systemCategory">시스템 구분</label>
-            <input type="text" id="systemCategory" name="systemCategory" value="pepero 시스템" readonly>
+            <button id="plan-btn" type="button" class="btn-save">저장</button>
         </div>
+        <form>
+            <div class="form-group">
+                <label for="request-type">요청 구분</label>
+                <select id="request-type" class="form-select">
+                    <option selected>선택</option>
+                    <option value="1">개선</option>
+                    <option value="2">신규</option>
+                    <option value="3">오류</option>
+                    <option value="4">기타</option>
+                </select>
+            </div>
 
-        <div class="form-group">
-            <label for="srTitle">SR제목</label>
-            <input type="text" id="srTitle" name="srTitle" value="타임아웃 기능에 오류 수정" readonly>
-        </div>
+            <div class="form-group">
+                <label for="team">처리팀</label>
+                <input type="text" id="team" value="개발 1팀">
+            </div>
 
-        <div class="form-group">
-            <label for="relatedReference">관련근거</label>
-            <input type="text" id="relatedReference" name="relatedReference" value="이러이러한 오류발생, 저러저러한 기능이 필요함" readonly>
-        </div>
+            <div class="form-group">
+                <label for="work-type">업무 구분</label>
+                <select id="work-type" class="form-select">
+                    <option selected>선택</option>
+                    <option value="1">111</option>
+                    <option value="2">222</option>
+                    <option value="3">333</option>
+                    <option value="4">444</option>
+                </select>
+            </div>
 
-        <div class="form-group">
-            <label for="requestTeam">요청팀</label>
-            <input type="text" id="requestTeam" name="requestTeam" value="개발 1팀" readonly>
+            <div class="form-group">
+                <label for="person">담당자</label>
+                <input type="text" id="person" value="정준범">
+            </div>
 
-            <label for="requester">요청자</label>
-            <input type="text" id="requester" name="requester" value="이민성" readonly>
-        </div>
+            <div class="form-group">
+                <label for="start-date">목표 시작일</label>
+                <input type="text" id="start-date" value="2024. 10. 26">
+            </div>
 
-        <div class="form-group">
-            <label for="requestDate">요청일</label>
-            <input type="text" id="requestDate" name="requestDate" value="2024.10.10" readonly>
+            <div class="form-group">
+                <label for="end-date">목표 완료일</label>
+                <input type="text" id="end-date" value="2024. 10. 26">
+            </div>
 
-            <label for="completionDate">완료 요청일</label>
-            <input type="text" id="completionDate" name="completionDate" value="2024.10.25" readonly>
-        </div>
+            <div class="form-group">
+                <label for="status">접수 상태</label>
+                <select id="status" class="form-select">
+                    <option selected>선택</option>
+                    <option>접수</option>
+                    <option>취소</option>
+                    <option>보류</option>
+                </select>
+            </div>
 
-        <div class="form-group">
-            <label for="srRequestNumber">SR요청번호</label>
-            <input type="text" id="srRequestNumber" name="srRequestNumber" value="EI_SR_0005" readonly>
-        </div>
+            <div class="form-group">
+                <label for="total-hours">총계획공수</label>
+                <input type="text" id="total-hours">
+            </div>
 
-        <div class="form-group">    
-            <label for="srContent">SR 내용</label>
-            <textarea id="srContent" name="srContent" rows="4" readonly>
-            </textarea>
-        </div>
+            <div class="form-group">
+                <label for="review">검토 내용</label>
+                <textarea id="review"></textarea>
+            </div>
 
-        <div class="form-group">
-            <label for="attachment">첨부파일</label>
-            <input type="text" id="attachment" name="attachment" value="example.xls" readonly>
-        </div>
-    </form>
-</div>
-    
+
+
+        </form>
+    </div>
+
 </body>
+
 </html>
