Update: "SR 계획 정보 입력"

--- a/html/srPlan.html
+++ b/html/srPlan.html
@@ -35,7 +35,7 @@
 
             <button id="plan-btn" type="button" class="btn-save">저장</button>
         </div>
-        <form>
+        <form id="sr-plan-form">
             <div class="form-group">
                 <label for="request-type">요청 구분</label>
                 <select id="request-type" class="form-select">
