--- a/html/hr.html
+++ b/html/hr.html
@@ -7,14 +7,17 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link href="../css/reset.css" rel="stylesheet">
     <link href="../css/hr.css" rel="stylesheet">
 </head>
 
 <body>
     <div id="srpg">
-        <span class="title">SR 요청 처리정보</span>
+        <div id="title">
+            SR 요청 처리정보
+        </div>
         <hr>
-        <div class="tabs-container d-flex align-items-center">
+        <div class="hr-tabs-container d-flex align-items-center">
             <ul class="nav nav-tabs">
                 <li class="nav-item">
                   <a class="nav-link pg-tab" data-bs-toggle="tab" href="#">SR계획정보</a>
@@ -32,58 +35,58 @@
                   <button id="save-btn" class="btn srpg-btn">저장</button>
               </div>
         </div>
-        <div id="table-container">
-            <table id="pg-table">
+        <div id="hr-table-container">
+            <table id="hr-table">
                 <thead>
                     <tr>
-                        <th class="col-1"></th>
-                        <th class="col-2">
+                        <th class="hr-col-1"></th>
+                        <th class="hr-col-2">
                             <input class="form-check-input" type="checkbox" value="">
                         </th>
-                        <th class="col-3">담당자명</th>
-                        <th class="col-4">역할</th>
-                        <th class="col-5">계획공수(M/D)</th>
-                        <th class="col-6">실적공수(M/D)</th>
-                        <th class="col-7">일자별실적조회</th>
+                        <th class="hr-hr-col-3">담당자명</th>
+                        <th class="hr-col-4">역할</th>
+                        <th class="hr-col-5">계획공수(M/D)</th>
+                        <th class="hr-col-6">실적공수(M/D)</th>
+                        <th class="hr-col-7">일자별실적조회</th>
                     </tr>
                 </thead>
                 <tbody>
                     <tr>
-                        <td class="col-1">1</td>
-                        <td class="col-2">
+                        <td class="hr-col-1">1</td>
+                        <td class="hr-col-2">
                             <input class="form-check-input" type="checkbox" value="">
                         </td>
-                        <td class="col-3">김채홍</td>
-                        <td class="col-4">팀장</td>
-                        <td class="col-5">5.0</td>
-                        <td class="col-6">3.0</td>
-                        <td class="col-7">
+                        <td class="hr-col-3">김채홍</td>
+                        <td class="hr-col-4">팀장</td>
+                        <td class="hr-col-5">5.0</td>
+                        <td class="hr-col-6">3.0</td>
+                        <td class="hr-col-7">
                             <i class="bi bi-journal"></i>
                         </td>
                     </tr>
                     <tr>
-                        <td class="col-1">2</td>
-                        <td class="col-2">
+                        <td class="hr-col-1">2</td>
+                        <td class="hr-col-2">
                             <input class="form-check-input" type="checkbox" value="">
                         </td>
-                        <td class="col-3">정준범</td>
-                        <td class="col-4">팀원</td>
-                        <td class="col-5">5.0</td>
-                        <td class="col-6">3.0</td>
-                        <td class="col-7">
+                        <td class="hr-col-3">정준범</td>
+                        <td class="hr-col-4">팀원</td>
+                        <td class="hr-col-5">5.0</td>
+                        <td class="hr-col-6">3.0</td>
+                        <td class="hr-col-7">
                             <i class="bi bi-journal"></i>
                         </td>
                     </tr>
                     <tr>
-                        <td class="col-1">3</td>
-                        <td class="col-2">
+                        <td class="hr-col-1">3</td>
+                        <td class="hr-col-2">
                             <input class="form-check-input" type="checkbox" value="">
                         </td>
-                        <td class="col-3">이민성</td>
-                        <td class="col-4">팀원</td>
-                        <td class="col-5">5.0</td>
-                        <td class="col-6">3.0</td>
-                        <td class="col-7">
+                        <td class="hr-col-3">이민성</td>
+                        <td class="hr-col-4">팀원</td>
+                        <td class="hr-col-5">5.0</td>
+                        <td class="hr-col-6">3.0</td>
+                        <td class="hr-col-7">
                             <i class="bi bi-journal"></i>
                         </td>
                     </tr>
