--- a/html/srPlan.html
+++ b/html/srPlan.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <div id="sr-plan">
+    <div id="sr-plan-info">
 
         <div id="title">
             SR 요청 처리정보
@@ -97,9 +97,6 @@
                 <label for="review">검토 내용</label>
                 <textarea id="review"></textarea>
             </div>
-
-
-
         </form>
     </div>
 
